--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>fourchad</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>fourchad</name>
-	<description>Fourchad backend.</description>
+	<description>Fourchad backend</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
